# GRM_django_project

./: .gitignore  pyproject.toml
CRM_django/: requirements.txt
CRM_django/CRM_django/: asgi.py  settings.py  urls.py  wsgi.py
CRM_django/company/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
CRM_django/company/migrations/: 0001_initial.py  0002_company_inn_company_company_owner_and_more.py
CRM_django/product/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/product/migrations/: 0001_initial.py
CRM_django/sale/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/sale/migrations/: 0001_initial.py
CRM_django/storage/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/storage/migrations/: 0001_initial.py
CRM_django/supplier/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/supplier/migrations/: 0001_initial.py
CRM_django/supply/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/supply/migrations/: 0001_initial.py
CRM_django/users/: admin.py  models.py  serializers.py  urls.py  views.py
CRM_django/users/migrations/: 0001_initial.py
